--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.img1 {
+/* .img1 {
   content: url("https://picsum.photos/id/237/200/300");
 }
 
@@ -37,4 +37,4 @@ p {
 
 button {
   margin: 20px;
-}
+} */
